# MSRawJava

./: .classpath  .gitignore  .project  AGENTS.md  NuGet.config  QUICKSTART.md  README.md  STYLE_NOTES.md  StaggeredDemuxNotes.md  TODO.md  VISUALIZATION_PLAN.md  demux_differences_notes.md  increment_version.sh  mzml_tasklist.md  pom.xml
.claude/: .lsp.json
.github/workflows/: maven-publish.yml
core/: .classpath  .project  pom.xml
core/src/main/java/org/searlelab/msrawjava/: COREPreferences.java  LogRecorder.java  Main.java  Version.java
core/src/test/java/org/searlelab/msrawjava/: COREPreferencesTest.java  JavaInfoTest.java  LoggerTest.java  MainCliArgumentsAdditionalTest.java  MainCliArgumentsTest.java  MainConversionTest.java  MainEntryPointTest.java  MainHelperTest.java  MainIndicatorTest.java  MainSmokeTest.java  (+3 more)
core/src/test/resources/rawdata/: Astral_GPFDIA_2mz.raw  HeLa_16mzst_orig.dia  README.md  Stellar_DIA_4mz.raw
gui/: .project  icon.afdesign  msrawjava.install4j  pom.xml
proto/: thermo_raw.proto
rust-jni/: Cargo.toml
rust-jni/src/: error.rs  extract.rs  ffi.rs  iter.rs  lib.rs  state.rs
scripts/: build-all-net.sh  build-all-rust.sh
src/main/java/org/searlelab/msrawjava/: LogRecorder.java  Logger.java  Main.java  VendorFileFinder.java  VendorFiles.java  Version.java
src/test/java/org/searlelab/msrawjava/: LoggerTest.java  VersionTest.java
src/test/resources/rawdata/: Exploris_DIA_16mzst.raw  README.md  Stellar_DDA.raw
src/test/resources/rawdata/dda_test.d/: analysis.tdf
thermo-raw-server/: MSRaw.Thermo.Server.csproj  Program.cs
(+329 files in other folders)
