[package]
name = "timsrust_jni"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "JNI bridge for fast, selective reading of Bruker timsTOF data using timsrust"

[lib]
name = "timsrust_jni"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "1.0"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["extern_crate_std"] }

# Only enable rusqlite: do NOT enable timscompress here
timsrust = { git = "https://github.com/MannLabs/timsrust" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
